# 1.0.14
1. Http.postMultipart 自动 setDoOutput(true)
2. 废弃 Http.urlAppend, 新增 Http.createUrl, Http.createUrlWithQuery, Http.createUrlWithCharset
3. 重命名 Http.post(conn, ctype, body) 为 Http.postWithBody(conn, ctype, body)
4. 废弃 Http.buildUrl, 新增 Http.resolveUrl

# 1.0.13
1. Http 标记原 open 方法过时
2. 增加 可以指定 HostnameVerifier, SSLSocketFactory 的 open 方法 及 getInsecureSSLSocketFactory 方法.
3. 新 open 方法移除默认添加 Host、User-Agent, Connection 的逻辑.
4. Http.splitQuery() 支持传递URL

# 1.0.12
1. Types 错误信息调整

# 1.0.11
1. 调整 Reflect 对 public final 也进行 accessible 判断.
2. 调整 Http post 方法对 params 处理为默认 url encode.

# 1.0.10
1. 修复上个版本因为处理 RSA 而引起的加密没有处理原始内容问题

# 1.0.9
1. freework.crypto.cipher.Crypt 修正为加密使用公钥, 解密使用私钥.
2. freework.crypto.cipher.Crypt 生成的公钥默认使用X509EncodedKeySpec, 生成的私钥默认使用PKCS8EncodedKeySpec.
3. freework.crypto.cipher.Crypt 处理RSA"Data must not be longer than 117 bytes"问题, 采用分段加密.

# 1.0.9
1. freework.crypto.cipher.Crypt 增加算法参数支持.