@@ -3,6 +3,8 @@
 2. 废弃 Http.urlAppend, 新增 Http.createUrl, Http.createUrlWithQuery, Http.createUrlWithCharset
 3. 重命名 Http.post(conn, ctype, body) 为 Http.postWithBody(conn, ctype, body)
 4. 废弃 Http.buildUrl, 新增 Http.resolveUrl
+5. 优化 LazyValue 实现, 移动到 util 包中
+6. 移除 crypt 包中 Format 调整为内部类
 
 # 1.0.13
 1. Http 标记原 open 方法过时
